--- a/_resetatron.scss
+++ b/_resetatron.scss
@@ -10,50 +10,42 @@ $text: #333;
     margin: 0;
     padding: 0;
 }
+
 body {
-   font: 300 100%/1.4 "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font: 300 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    color: $text;
 }
 
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
     margin: 0;
+    line-height: 1.25
 }
 
-h1 {
-	font-size: 225%;
-}
-h2 {
-	font-size: 200%;
-}
-h3 {
-	font-size: 175%;
-}
-h4 {
-	font-size: 150%;
-}
-h5 {
-	font-size: 125%;
-}
-h6  {
-	font-size: 100%;
-}
+h1 { font-size: 225%; }
 
-p {
-    margin: .5rem 0;
-}
+h2 { font-size: 200%; }
 
-a {
-    text-decoration: none;
-}
+h3 { font-size: 175%; }
+
+h4 { font-size: 150%; }
+
+h5 { font-size: 125%; }
+
+h6 { font-size: 100%; }
+
+p { margin: .75rem 0; }
+
+b, strong { font-weight: bold; }
+
+i, em { font-style: italic; }
+
+a { text-decoration: none; }
 
 ul, ol {
 	list-style-position: inside;
 	padding: 0;
 	margin: .5rem 0;
-	li {
-		
-	}
 }
 
 blockquote {
@@ -63,7 +55,9 @@ blockquote {
 	margin: 1rem 0;
 	background: rgba($text, .3 );
 	color: white;
-	p {
-    	color: white;
-	}
+	p { color: white; }
 }
+
+
+
+
