--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,9 @@ blockquote {
 html {
   background: #c3dde4; }
 
+p {
+  font-weight: 400; }
+
 .main {
   max-width: 45rem;
   padding: 1rem;
@@ -73,6 +76,10 @@ html {
     color: white; }
   .main p {
     color: #3990a4; }
+
+a {
+  color: white;
+  /*     &:hover { color: $red; } */ }
 
 blockquote {
   color: white; }
@@ -120,3 +127,17 @@ blockquote {
       width: 100%;
       float: right;
       text-align: center; } }
+
+button {
+  padding: 1rem;
+  background: #3990a4;
+  font: 700 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  border: 0;
+  border-radius: 25px;
+  background-image: -moz-linear-gradient(180deg, #3990a4 0%, #40a3ba 100%);
+  background-image: -webkit-linear-gradient(180deg, #3990a4 0%, #40a3ba 100%);
+  background-image: linear-gradient(180deg, #3990a4 0%, #40a3ba 100%); }
+  button:hover {
+    background-image: -moz-linear-gradient(180deg, #3990a4 0%, #4bbfda 100%);
+    background-image: -webkit-linear-gradient(180deg, #3990a4 0%, #4bbfda 100%);
+    background-image: linear-gradient(180deg, #3990a4 0%, #4bbfda 100%); }
