--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,17 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   margin: 0;
   padding: 0; }
 
-body {
-  font: 300 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+html {
+  font: 400 100%/1.5 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #333333; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  margin: 0;
-  line-height: 1.25; }
+  font-weight: 700;
+  margin: 0 0 .5rem;
+  line-height: 1.2; }
 
 h1 {
   font-size: 225%; }
@@ -36,7 +32,12 @@ h6 {
   font-size: 100%; }
 
 p {
-  margin: .75rem 0; }
+  margin-bottom: 1rem;
+  max-width: 38rem;
+  word-wrap: break-word;
+  text-rendering: optimizeLegibility; }
+  p:last-of-type {
+    margin-bottom: 0; }
 
 b, strong {
   font-weight: bold; }
@@ -51,16 +52,21 @@ ul, ol {
   list-style-position: inside;
   padding: 0;
   margin: .5rem 0; }
+  ul li ul, ol li ul {
+    margin-left: 1rem; }
 
 blockquote {
   border-left: 5px solid #333333;
-  padding: 1rem;
+  padding: 1.5rem;
   font-style: italic;
   margin: 1rem 0;
   background: rgba(51, 51, 51, 0.3);
   color: white; }
   blockquote p {
-    color: white; }
+    line-height: 1.6;
+    font-weight: 300;
+    font-size: 1.125rem;
+    margin: 0 0 .5rem; }
 
 html {
   background: #c3dde4; }
@@ -69,7 +75,7 @@ p {
   font-weight: 400; }
 
 .main {
-  max-width: 45rem;
+  max-width: 38rem;
   padding: 1rem;
   margin: 2rem auto; }
   .main h1, .main h2, .main h3, .main h4, .main h5, .main h6 {
@@ -85,10 +91,11 @@ blockquote {
     color: white !important; }
 
 .intro {
-  max-width: 68rem;
+  max-width: 45rem;
   margin: 2rem auto;
   color: white;
-  padding: 1rem; }
+  padding: 1rem;
+  display: flex; }
   .intro h1 {
     font-weight: bold;
     font-size: 7rem;
@@ -109,14 +116,13 @@ blockquote {
   .intro code {
     color: #3990a4; }
   .intro aside {
-    float: left;
-    width: 25%;
-    padding: 0 1rem 0 0; }
+    flex: 1;
+    padding: .5rem; }
     .intro aside img {
       max-width: 100%; }
   .intro article {
-    width: 75%;
-    float: left; }
+    flex: 3;
+    padding: .5rem; }
   .intro:after {
     content: "";
     display: table;
@@ -131,22 +137,19 @@ blockquote {
       float: right;
       text-align: center; } }
 
-button {
+.btn {
   padding: 1rem 2rem;
   background: #3990a4;
+  display: inline-block;
   font: 700 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   border: 0;
-  border-radius: 25px;
-  margin: 0 .5rem;
-  background-image: -moz-linear-gradient(180deg, #3990a4 0%, #40a3ba 100%);
-  background-image: -webkit-linear-gradient(180deg, #3990a4 0%, #40a3ba 100%);
-  background-image: linear-gradient(180deg, #3990a4 0%, #40a3ba 100%); }
-  button:hover {
-    background-image: -moz-linear-gradient(180deg, #3990a4 0%, #4bbfda 100%);
-    background-image: -webkit-linear-gradient(180deg, #3990a4 0%, #4bbfda 100%);
-    background-image: linear-gradient(180deg, #3990a4 0%, #4bbfda 100%); }
+  border-radius: .5rem;
+  margin: .5rem .25rem;
+  transition: all 375ms linear; }
+  .btn:hover, .btn:focus {
+    background: #346674; }
   @media (max-width: 40rem) {
-    button {
+    .btn {
       display: block;
       width: 100%;
       margin: 1rem auto 0; } }
