--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -8,10 +8,11 @@ html {
 
 p {
     font-weight: 400;
+
 }
 
 .main {
-    max-width: 45rem;
+    max-width: 38rem;
     padding: 1rem;
     margin: 2rem auto;
     h1, h2, h3, h4, h5, h6 { color: white; }
@@ -27,10 +28,11 @@ blockquote {
 }
 
 .intro {
-    max-width: 68rem;
+    max-width: 45rem;
     margin: 2rem auto;
     color: white;
     padding: 1rem;
+    display: flex;
     h1 {
         font-weight: bold;
         font-size: 7rem;
@@ -39,26 +41,25 @@ blockquote {
         @media (max-width:40rem) { font-size: 3rem; }
     }
     h2 {
-        font-size: 4rem; 
-        font-weight: bold; 
+        font-size: 4rem;
+        font-weight: bold;
         @media (max-width:40rem) { font-size: 1.75rem; }
     }
     h3 {
         @media (max-width:40rem) { font-size: 1rem; }
     }
     code { color: $darkblue; }
-    
+
     aside {
-        float: left;
-        width: 25%;
-        padding: 0 1rem 0 0;
+        flex: 1;
+        padding: .5rem;
         img {
             max-width: 100%;
         }
     }
     article {
-        width: 75%;
-        float: left;
+        flex: 3;
+        padding: .5rem;
     }
     &:after {
             content: "";
@@ -66,7 +67,7 @@ blockquote {
             clear: both;
     }
     p { max-width: 35rem; }
-    
+
     @media (max-width:40rem) {
         article {
             width: 100%;
@@ -79,21 +80,16 @@ blockquote {
     }
 }
 
-button {
+.btn {
     padding: 1rem 2rem;
     background: $darkblue;
+    display: inline-block;
     font: 700 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     border: 0;
-    border-radius: 25px;
-    margin: 0 .5rem;
-    background-image: -moz-linear-gradient(180deg , rgb(57,144,164) 0%, rgb(64,163,186) 100%);
-	background-image: -webkit-linear-gradient(180deg , rgb(57,144,164) 0%, rgb(64,163,186) 100%);
-	background-image: linear-gradient(180deg , rgb(57,144,164) 0%, rgb(64,163,186) 100%);
-    &:hover {
-        background-image: -moz-linear-gradient(180deg , rgb(57,144,164) 0%, rgb(75,191,218) 100%);
-        background-image: -webkit-linear-gradient(180deg , rgb(57,144,164) 0%, rgb(75,191,218) 100%);
-        background-image: linear-gradient(180deg , rgb(57,144,164) 0%, rgb(75,191,218) 100%);
-    }
+    border-radius: .5rem;
+    margin: .5rem .25rem;
+    transition: all 375ms linear;
+    &:hover, &:focus { background: darken($liteblue, 50%); }
     @media (max-width:40rem) {
         display: block;
         width: 100%;
