--- a/_resetatron.scss
+++ b/_resetatron.scss
@@ -1,26 +1,21 @@
 $text: #333;
 
-/* Reset */
 * {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body {
-   font: 300 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-   color: $text;
+html {
+    font: 400 100%/1.5 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    color: $text;
 }
 
 h1,h2,h3,h4,h5,h6 {
-    font-weight: normal;
-    margin: 0;
-    line-height: 1.25
+    font-weight: 700;
+    margin: 0 0 .5rem;
+    line-height: 1.2;
 }
 
 h1 { font-size: 225%; }
@@ -35,7 +30,15 @@ h5 { font-size: 125%; }
 
 h6 { font-size: 100%; }
 
-p { margin: .75rem 0; }
+p {
+    margin-bottom: 1rem;
+    max-width: 38rem;
+    word-wrap: break-word;
+    text-rendering: optimizeLegibility;
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+}
 
 b, strong { font-weight: bold; }
 
@@ -44,21 +47,27 @@ i, em { font-style: italic; }
 a { text-decoration: none; }
 
 ul, ol {
-	list-style-position: inside;
-	padding: 0;
-	margin: .5rem 0;
+    list-style-position: inside;
+    padding: 0;
+    margin: .5rem 0;
+    li {
+        ul {
+            margin-left: 1rem;
+        }
+    }
 }
 
 blockquote {
-	border-left: 5px solid $text;
-	padding: 1rem;
-	font-style: italic;
-	margin: 1rem 0;
-	background: rgba($text, .3 );
-	color: white;
-	p { color: white; }
+    border-left: 5px solid $text;
+    padding: 1.5rem;
+    font-style: italic;
+    margin: 1rem 0;
+    background: rgba($text, .3 );
+    color: white;
+    p {
+        line-height: 1.6;
+        font-weight: 300;
+        font-size: 1.125rem;
+        margin: 0 0 .5rem;
+    }
 }
-
-
-
-
