switching from % to rems

--- a/_resetatron.scss
+++ b/_resetatron.scss
@@ -18,17 +18,17 @@ h1,h2,h3,h4,h5,h6 {
     line-height: 1.2;
 }
 
-h1 { font-size: 225%; }
+h1 { font-size: 2rem; }
 
-h2 { font-size: 200%; }
+h2 { font-size: 1.75rem; }
 
-h3 { font-size: 175%; }
+h3 { font-size: 1.5rem; }
 
-h4 { font-size: 150%; }
+h4 { font-size: 1.25rem; }
 
-h5 { font-size: 125%; }
+h5 { font-size: 1.125rem; }
 
-h6 { font-size: 100%; }
+h6 { font-size: 1rem; }
 
 p {
     margin-bottom: 1rem;
