--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,25 +2,18 @@ $liteblue: #c3dde4;
 $darkblue: #3990a4;
 $red: #b2222a;
 
-html {
-    background: $liteblue;
-}
+html { background: mix($liteblue, $darkblue, 80%); }
 
-p {
-    font-weight: 400;
-
-}
+p { font-weight: 400; }
 
 .main {
     max-width: 38rem;
     padding: 1rem;
     margin: 2rem auto;
     h1, h2, h3, h4, h5, h6 { color: white; }
-    p { }
 }
 a {
     color: white;
-/*     &:hover { color: $red; } */
 }
 blockquote {
     color: white;
@@ -28,43 +21,35 @@ blockquote {
 }
 
 .intro {
-    max-width: 45rem;
+    max-width: 38rem;
     margin: 2rem auto;
     color: white;
     padding: 1rem;
-    display: flex;
+    header {
+        // text-align: center;
+    }
+    footer {
+        margin-top: 2rem;
+    }
     h1 {
-        font-weight: bold;
-        font-size: 7rem;
         line-height: 1;
         color: $darkblue;
-        @media (max-width:40rem) { font-size: 3rem; }
-    }
-    h2 {
-        font-size: 4rem;
-        font-weight: bold;
-        @media (max-width:40rem) { font-size: 1.75rem; }
-    }
-    h3 {
-        @media (max-width:40rem) { font-size: 1rem; }
+        @media (max-width:40rem) { font-size: 2.5rem; }
     }
     code { color: $darkblue; }
-
     aside {
-        flex: 1;
-        padding: .5rem;
+        position: relative;
         img {
-            max-width: 100%;
+            max-width: 15rem;
+            display: block;
+            margin: 0 auto;
         }
     }
     article {
-        flex: 3;
         padding: .5rem;
-    }
-    &:after {
-            content: "";
-            display: table;
-            clear: both;
+        position: absolute;
+        top: 5rem;
+        background-image: linear-gradient(to top, mix($liteblue, $darkblue, 80%) 50%, rgba(0, 0, 0, 0) 100%);
     }
     p { max-width: 35rem; }
 
@@ -82,14 +67,14 @@ blockquote {
 
 .btn {
     padding: 1rem 2rem;
-    background: $darkblue;
     display: inline-block;
-    font: 700 100%/1.4 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    border: 0;
+    font-weight: 400;
+    color: $darkblue;
+    border: 2px solid;
     border-radius: .5rem;
     margin: .5rem .25rem;
     transition: all 375ms linear;
-    &:hover, &:focus { background: darken($liteblue, 50%); }
+    &:hover, &:focus { background: darken($liteblue, 50%); color: white; }
     @media (max-width:40rem) {
         display: block;
         width: 100%;
