--- a/_resetatron.scss
+++ b/_resetatron.scss
@@ -1,76 +1,4 @@
-$text: #333;
-
-* {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font: 400 100%/1.5 "Helvetica", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    color: $text;
-}
-
-h1,h2,h3,h4,h5,h6 {
-    font-weight: 700;
-    margin: 0 0 .5rem;
-    line-height: 1.2;
-}
-
-h1 { font-size: 2rem; }
-
-h2 { font-size: 1.75rem; }
-
-h3 { font-size: 1.5rem; }
-
-h4 { font-size: 1.25rem; }
-
-h5 { font-size: 1.125rem; }
-
-h6 { font-size: 1rem; }
-
-p {
-    margin-bottom: 1rem;
-    max-width: 38rem;
-    word-wrap: break-word;
-    text-rendering: optimizeLegibility;
-    &:last-of-type {
-        margin-bottom: 0;
-    }
-}
-
-b, strong { font-weight: bold; }
-
-i, em { font-style: italic; }
-
-a { text-decoration: none; }
-
-ul, ol {
-    list-style-position: inside;
-    padding: 0;
-    margin: .5rem 0;
-    li {
-        ul {
-            margin-left: 1rem;
-        }
-    }
-}
-
-blockquote {
-    border-left: 5px solid $text;
-    padding: 1.5rem;
-    font-style: italic;
-    margin: 1rem 0;
-    background: rgba($text, .3 );
-    color: white;
-    p {
-        line-height: 1.6;
-        font-weight: 300;
-        font-size: 1.125rem;
-        margin: 0 0 .5rem;
-    }
-}
-@import "src/reset";
-@import "src/typography";
-@import "src/util";
+@import 'src/reset';
+@import 'src/typography';
+@import 'src/util';
+@import 'src/state';
