--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -20,12 +20,12 @@ h5 { font-size: $baseFontSize + ($baseFontSize/8); }
 h6 { font-size: $baseFontSize; }
 
 p {
-	margin-bottom: 1rem;
+	margin-bottom: $baseFontSize;
 	max-width: 38rem;
 	font-size: $baseFontSize;
 	word-wrap: break-word;
 	text-rendering: optimizeLegibility;
-	&:last-of-type {margin-bottom: 0;}
+	&:last-of-type { margin-bottom: 0; }
 }
 
 b, strong { font-weight: bold; }
@@ -41,10 +41,10 @@ a {
 ul, ol {
 	list-style-position: inside;
 	padding: 0;
-	margin: .5rem 0;
+	margin: 0;
 	li {
 		font-size: $baseFontSize;
-		ul { margin-left: 1rem; }
+		ul { margin-left: $baseFontSize; }
 	}
 }
 
@@ -72,4 +72,19 @@ blockquote {
 			background: $baseColor;
 		}
 	}
+}
+
+blockquote {
+    border-left: 5px solid $text;
+    padding: 1.5rem;
+    font-style: italic;
+    margin: 1rem 0;
+    background: rgba($text, .3 );
+    color: white;
+    p {
+        line-height: 1.6;
+        font-weight: 300;
+        font-size: 1.125rem;
+        margin: 0 0 .5rem;
+    }
 }
