--- a/src/_state.scss
+++ b/src/_state.scss
@@ -1,2 +1,2 @@
-.is--shown { display: block !important; opacity: 0; }
-.is--hidden { display: none !important; opacity: 1; }
+.is-shown { display: block !important; opacity: 0; }
+.is-hidden { display: none !important; opacity: 1; }
